// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductView should render component 1`] = `
<Card
  body={false}
>
  <CardHeader>
    Hewitt
  </CardHeader>
  <CardBody>
    Officia adipisicing velit anim deserunt officia est qui excepteur ullamco laborum.
    <br />
    <Link
      to={
        Object {
          "pathname": "product/5ff81abb0e750ff69443daf8",
        }
      }
    >
       
    </Link>
    <br />
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      type="button"
      variant="primary"
    />
  </CardBody>
  <CardImg
    src="http://placehold.it/32x32"
    variant={null}
  />
</Card>
`;

exports[`ProductView should render not editable component 1`] = `
<Card
  body={false}
>
  <CardHeader>
    Hewitt
  </CardHeader>
  <CardBody>
    Officia adipisicing velit anim deserunt officia est qui excepteur ullamco laborum.
  </CardBody>
  <CardImg
    src="http://placehold.it/32x32"
    variant={null}
  />
</Card>
`;
